<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">arcm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="map_update">Map Update</string>
    <string name="buttons_config">Buttons Config</string>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="start">START</string>
    <string name="right">RIGHT</string>
    <string name="left">LEFT</string>
    <string name="forward">FORWARD</string>
    <string name="update">UPDATE</string>
    <string name="connect">Connect</string>
    <string name="chat">Chat</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="save_all">Save All</string>
    <string name="clear_all">Clear All</string>
    <string name="stop">STOP</string>
    <string name="connect_to">Connect To... </string>
    <string name="f">F</string>
    <string name="l">L</string>
    <string name="r">R</string>
    <string name="current_status">Current Status: </string>
    <string name="auto">AUTO</string>
    <string name="manual">MANUAL</string>
    <string name="exploration_time">Exploration Time</string>
    <string name="fastest_run_time">Fastest-Run Time</string>
    <string name="reset">RESET</string>
    <string name="timer_default">0:00</string>
    <string name="title_activity_coordinates">Coordinates</string>
    <string name="Xpos">Xpos</string>
    <string name="Ypos">Ypos</string>


</resources>
